--- a/Resourse/res/values/styles.xml
+++ b/Resourse/res/values/styles.xml
@@ -17,4 +17,17 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!-- 自定义界面切换动画 -->
+    <style name="ThemeActivity" mce_bogus="1">
+        <item name="android:windowAnimationStyle">@style/AnimationActivity</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="AnimationActivity" mce_bogus="1" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/anim_enter</item><!-- 打开的进入和退出 -->
+        <item name="android:activityOpenExitAnimation">@anim/anim_exit</item>
+      	<item name="android:activityCloseEnterAnimation">@anim/back_enter</item><!-- 返回的进入和退出 -->
+        <item name="android:activityCloseExitAnimation">@anim/back_exit</item>
+    </style>
+    
 </resources>
