--- a/Resourse/res/layout/activity_main.xml
+++ b/Resourse/res/layout/activity_main.xml
@@ -15,11 +15,18 @@
         android:layout_height="wrap_content"
         android:onClick="onClick_Animtation"
         android:text="动画" />
+
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="onClick_Reflect"
         android:text="图片倒影" />
 
+    <Button
+        android:id="@+id/btn_contentprovider"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick_Main"
+        android:text="ContentProvider" />
 
 </LinearLayout>
