--- a/Resourse/res/layout/activity_main.xml
+++ b/Resourse/res/layout/activity_main.xml
@@ -28,5 +28,11 @@
         android:layout_height="wrap_content"
         android:onClick="onClick_Main"
         android:text="ContentProvider" />
+    <Button
+        android:id="@+id/btn_popupwind"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick_Main"
+        android:text="PopupWindow测试" />
 
 </LinearLayout>
