--- a/Resourse/res/layout/popupwin.xml
+++ b/Resourse/res/layout/popupwin.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_showpopupwin"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:onClick="showPopupWindow"
+        android:text="打开popupWindow" />
 
 </LinearLayout>
