--- a/Resourse/res/layout/activity_main.xml
+++ b/Resourse/res/layout/activity_main.xml
@@ -80,6 +80,13 @@
             android:layout_height="wrap_content"
             android:onClick="onClick_Main"
             android:text="自定义View" />
+        <Button
+            android:id="@+id/btn_customtextview"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:onClick="onClick_Main"
+            android:text="自定义TextView" />
     </LinearLayout>
 
 </LinearLayout>
