--- a/Resourse/res/layout/main_expandedlist.xml
+++ b/Resourse/res/layout/main_expandedlist.xml
@@ -8,6 +8,7 @@
         android:id="@+id/expandedlist"
         android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:drawSelectorOnTop="false"/>
+    android:drawSelectorOnTop="false"
+    android:groupIndicator="@drawable/expand_selector"/>
 
 </LinearLayout>
