--- a/Resourse/res/values/styles.xml
+++ b/Resourse/res/values/styles.xml
@@ -19,6 +19,8 @@
 
     <!-- 自定义界面切换动画 -->
     <style name="ThemeActivity" mce_bogus="1">
+        <!-- 提示背景图片 -->
+       <item name="android:windowBackground">@drawable/bg_theme</item>
         <item name="android:windowAnimationStyle">@style/AnimationActivity</item>
         <item name="android:windowNoTitle">true</item>
     </style>
@@ -29,5 +31,16 @@
       	<item name="android:activityCloseEnterAnimation">@anim/back_enter</item><!-- 返回的进入和退出 -->
         <item name="android:activityCloseExitAnimation">@anim/back_exit</item>
     </style>
+    
+    <!-- style name以及它所继承的系统Theme主题 -->
+     <style  name="Theme.MainActivity" parent="android:Theme">
+     <!-- 是否允许有标题栏 -->
+       <item name="android:windowNoTitle">true</item>
+       <!-- 提示背景图片 -->
+       <item name="android:windowBackground">@drawable/bg_theme</item>
+       <item name="android:windowContentOverlay">@null</item>
+       <!-- 是否允许背景灰暗 -->
+       <item name="android:backgroundDimEnabled">false</item>
+     </style>
     
 </resources>
