--- a/Resourse/res/layout/activity_main.xml
+++ b/Resourse/res/layout/activity_main.xml
@@ -177,5 +177,16 @@
             android:onClick="onClick_Main"
             android:text="锁屏" />
     </LinearLayout>
+	<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
 
+        <Button
+            android:id="@+id/btn_testscroller"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick_Main"
+            android:text="scroller测试" />
+    </LinearLayout>
 </LinearLayout>
