--- a/Resourse/res/layout/activity_main.xml
+++ b/Resourse/res/layout/activity_main.xml
@@ -25,6 +25,19 @@
             android:text="测试" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/Testspannablestring"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClickTextView"
+            android:text="TextView格式变换" />
+    </LinearLayout>
+
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -44,44 +57,40 @@
         android:onClick="onClick_Main"
         android:text="ContentProvider" />
 
-    
-    
-     <LinearLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
         <Button
-        android:id="@+id/btn_popupwind"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-          android:layout_weight="1"
-        android:onClick="onClick_Main"
-        android:text="PopupWindow测试" />
-        
-        <Button
-        android:id="@+id/btn_windowmanager"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-          android:layout_weight="1"
-        android:onClick="onClick_Main"
-        android:text="WindowManager测试" />
+            android:id="@+id/btn_popupwind"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick_Main"
+            android:text="PopupWindow测试" />
 
+        <Button
+            android:id="@+id/btn_windowmanager"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick_Main"
+            android:text="WindowManager测试" />
     </LinearLayout>
 
-      <LinearLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
         <Button
-        android:id="@+id/btn_viewdraghelper"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:onClick="onClick_Main"
-        android:text="ViewDragHelper测试" />
-
+            android:id="@+id/btn_viewdraghelper"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick_Main"
+            android:text="ViewDragHelper测试" />
     </LinearLayout>
-     
+
     <Button
         android:id="@+id/btn_drawpic"
         android:layout_width="fill_parent"
@@ -151,6 +160,7 @@
             android:onClick="onClick_Main"
             android:text="伸展ListView" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
@@ -162,6 +172,7 @@
             android:layout_weight="1"
             android:onClick="onClick_Main"
             android:text="获取权限" />
+
         <Button
             android:id="@+id/btn_stoppermission"
             android:layout_width="0dp"
@@ -169,6 +180,7 @@
             android:layout_weight="1"
             android:onClick="onClick_Main"
             android:text="删除权限" />
+
         <Button
             android:id="@+id/btn_lockscreen"
             android:layout_width="0dp"
@@ -177,7 +189,8 @@
             android:onClick="onClick_Main"
             android:text="锁屏" />
     </LinearLayout>
-	<LinearLayout
+
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
@@ -189,4 +202,5 @@
             android:onClick="onClick_Main"
             android:text="scroller测试" />
     </LinearLayout>
+
 </LinearLayout>
